--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "server.js",
   "author": "Kaleb ",
   "license": "MIT",
+  "server":{
+    "start":"node server.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
   }
